--- a/README.org
+++ b/README.org
@@ -1,3 +1,26 @@
 #+TITLE: n-body-box
 
-This is a test.
+Playground for playing with WebGL, Node-Webkit and ClojureScript.
+
+Under construction.  Hard hats required.  Pointy bits everywhere.  Use
+at your own risk.  YMMV.  Do not try this at home.  Professional
+driver, closed course.  Consumption of =n-body-box= may cause hives,
+itching, dizzyness and spelling errors.
+
+* Work in progress.
+** Create node-webkit project
+** Create cool splash screen
+(lame, I know, but it's my project, dammit)
+** Create cool icon
+(ditto)
+
+* Disclaimer
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT
+OF THIRD PARTY RIGHTS. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
+IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR
+IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
