--- a/README.org
+++ b/README.org
@@ -1,18 +1,44 @@
-#+TITLE: n-body-box
+#+TITLE: nbodybox
 
 Playground for playing with WebGL, Node-Webkit and ClojureScript.
 
 Under construction.  Hard hats required.  Pointy bits everywhere.  Use
 at your own risk.  YMMV.  Do not try this at home.  Professional
-driver, closed course.  Consumption of =n-body-box= may cause hives,
+driver, closed course.  Consumption of =nbodybox= may cause hives,
 itching, dizzyness and spelling errors.
 
-* Work in progress.
-** Create node-webkit project
-** Create cool splash screen
+* Work in progress:
+** DONE Create node-webkit project
+- Adapt Brett Lischalk's [[https://github.com/blischalk/cljs-node-webkit-app/][work-in-progress]] ([[https://github.com/blischalk/cljs-node-webkit-app/blob/master/project.clj][project.clj]] and other files).
+- Use [[https://github.com/wilkerlucio/lein-node-webkit-build][this project]] to build (=lein node-webkit-build=).
+- Workflow (using [[https://github.com/eigenhombre/continuous-testing-helper][=conttest=]]):
+
+#+BEGIN_EXAMPLE
+    conttest '\
+    touch src/cljs/nbodybox/core.cljs && \
+    lein cljsbuild once    && \
+    lein node-webkit-build && \
+    unzip -o releases/NBodyBox-v0.0.0/NBodyBox-osx64-v0.0.0.zip && \
+    open NBodyBox.app'
+#+END_EXAMPLE
+
+(This unfortunately takes several seconds; would like to find a
+workflow which is more interactive...).
+
+** TODO Create cool splash screen
 (lame, I know, but it's my project, dammit)
-** Create cool icon
+
+See [[https://github.com/rogerwang/node-webkit/issues/811]].
+
+** DONE Create cool icon
 (ditto)
+
+Directions:
+- make square PNG image any way you care to.
+- Use [[http://iconverticons.com/online/]] and save =.icns= file to
+  =resources/icons/myicon.icns=.
+- Add =:osx { :icon "resources/icons/myicon.icns"}= to
+  =:node-webkit-build= map in =project.clj=.
 
 * Disclaimer
 
