--- a/README.org
+++ b/README.org
@@ -40,7 +40,9 @@ Directions:
 ** DONE Create cool splash screen
 (Splash screens can be lame, I know, but it's my project, dammit.)
 
-See [[https://github.com/rogerwang/node-webkit/issues/811]].
+See [[https://github.com/rogerwang/node-webkit/issues/811]].  Currently
+the first window started is the main screen.  It will need to create
+the "main" app window when it closes.
 
 
 * Disclaimer
