--- a/README.org
+++ b/README.org
@@ -40,13 +40,12 @@ Directions:
 ** Create cool splash screen
 (Splash screens can be lame, I know, but it's my project, dammit.)
 
-See [[https://github.com/rogerwang/node-webkit/issues/811]].  Currently
-the first window started is the main screen.  It will need to create
-the "main" app window when it closes.
+See [[https://github.com/rogerwang/node-webkit/issues/811]].
 
 * Next Steps:
 
-Make the simplest possible WebGL rendering.
+Make the simplest possible WebGL rendering, building on the kind of
+display implemented in [[https://github.com/eigenhombre/arx][Arx]].
 
 * Disclaimer
 
